test/bad/generics/def06.px

func f<>() T def
    return
